--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-05-18  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/convolve/convolve.c (complextoreal): Changed the two states
+	to three to add only conerting the real part of an array.
+
 2015-05-15  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/convolve/convolve.c (removepaddingcorrectroundoff): The
